<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    tools:context=".ui.activities.LoginActivity">

    <ImageView
        android:id="@+id/activity_login_background_image"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        android:src="@drawable/sushi_wallpaper" />

    <TextView
        android:id="@+id/activity_login_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/app_name"
        android:gravity="center"
        android:textSize="72sp"
        android:textColor="@android:color/white"
        android:fontFamily="sans-serif-condensed"
        android:layout_margin="20dp"
        android:padding="30dp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="52dp"
        android:layout_centerInParent="true"
        android:orientation="vertical"
        android:padding="15dp">

        <EditText
            android:id="@+id/activity_register_username"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:background="@drawable/full_dimmed_black"
            android:hint="@string/email"
            android:imeOptions="actionNext"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:padding="15dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <EditText
            android:id="@+id/activity_register_password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:imeOptions="actionDone"
            android:background="@drawable/full_dimmed_black"
            android:fontFamily="sans-serif"
            android:hint="@string/password"
            android:inputType="textPassword"
            android:maxLines="1"
            android:padding="15dp"
            android:textColor="@android:color/white"
            android:textColorHint="@android:color/white" />

        <TextView
            android:id="@+id/activity_register_button_register"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@drawable/full_red_from_yellow_selector"
            android:clickable="true"
            android:gravity="center"
            android:padding="15dp"
            android:text="@string/register"
            android:textColor="@android:color/black"
            android:textSize="20sp" />
    </LinearLayout>

</RelativeLayout>