...
    <string name="fragment_profile_toolbar_title">Profile</string>
    <string name="fragment_terms_toolbar_title">Terms and Conditions</string>
    <string name="fragment_create_meal_title">New Meal</string>
    <string name="fragment_create_user_title">New User</string>
    <string name="fragment_edit_user_title">Edit User</string>

    <string name="login_activity_error_field_required">You must fill this field</string>
    <string name="login_activity_no_such_user">Email or password invalid</string>
    <string name="login_activity_wrong_password">Wrong password</string>
    <string name="login_activity_other_error">Please check your connection and try again</string>
    <string name="login_activity_password_size">Your password must be between 8 and 16 characters</string>
    <string name="login_activity_email_inuse">Email is already in use</string>
    <string name="login_activity_invalid_email">Email is not valid</string>
    <string name="login_activity_invalid_password">Password is not valid</string>
    <string name="login_activity_max_entries">Please retry in a minute</string>

    <string name="toolbar_title_dashboard">Dashboard</string>
...
